--- a/base.css
+++ b/base.css
@@ -1,29 +1,30 @@
 #wrapper{
     max-width: 1000px;
     margin: 0 auto;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 body{
     width: 980px;
     margin: 0 auto;
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(192, 192, 192);
 }
 #header{
-    color: white;    
+    color: black;    
 }
 
 #header a{
     text-decoration: none;
     font-size: 40px;
-    font-weight: medium;
+    padding-left: 5px;
+    font-weight: bolder;
     font-family: "游明朝", YuMincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
-    color: white;
+    color: black;
 }
 
 #head_menu{
-    background-color: rgba(115, 62, 145, 0.5);
     overflow: hidden;
-    height: 40px;
+    height: 50px;
     width: auto;
 }
 
@@ -39,14 +40,14 @@ body{
     height: 40px;
     line-height: 40px;
     margin-left: 2px;
+    border: medium outset;
     text-align: center;
-    background-color: rgb(114, 62, 145); 
     float: left; 
     list-style: none; 
 }
 
 #head_menu li a{
-    color: rgb(255, 255, 255); 
+    color: rgb(0, 0, 0); 
     font-size: 18px; 
     font-weight: bold; 
     text-decoration: none;
@@ -55,6 +56,7 @@ body{
 
 #container{
     display: flex;
+    border: thick ridge;
 }
 
 #main_contents{
@@ -62,30 +64,35 @@ body{
     width: 80%;
     min-height: 500px;
     height: auto;
+    margin-left: 5px;
     padding-left: 15px;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgb(192, 192, 192);
 }
 
 #side_menu{
-    background-color: rgba(255, 255, 255, 0.7);
     width: 20%;
     min-height: 500px;
     height: auto;
-    padding-right: 5px;
-    border-right: medium solid rgba(255, 255, 255, 0.2);
+    overflow-y: scroll;
+    border-right: thick groove;
 }
 #side_menu ul{
-    margin-top: 0px;
+    margin-top: 5px;
+    padding-left: 0px;
 }
 #side_menu li{
     list-style: none;
+    padding-top: 1px;
+    padding-left: 10px;
+    border-bottom: medium groove;
 }
 #side_menu h3{
     height: 35px;
     text-align: center;
     margin: 5px 0px 0px 0px;
-    padding-top: 5px;
-    background-color: rgb(144, 131, 157);
+    padding-top: 10px;
+    background-color: rgb(0, 251, 255);
+    border: thick ridge;
 }
 
 #wrapper{
