--- a/base.css
+++ b/base.css
@@ -47,11 +47,11 @@ body{
 }
 
 #head_menu li a{
-    color: rgb(0, 0, 0); 
+    color: rgb(0, 0, 0);
     font-size: 18px; 
     font-weight: bold; 
     text-decoration: none;
-    padding: 7px;
+    display: block;
 }
 
 #container{
