--- a/base.css
+++ b/base.css
@@ -1,13 +1,13 @@
 #wrapper{
     max-width: 1000px;
     margin: 0 auto;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: monospace;
 }
 
 body{
-    width: 980px;
+    max-width: 1000px;
     margin: 0 auto;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(212, 208, 199);
 }
 #header{
     color: black;    
@@ -66,7 +66,6 @@ body{
     height: auto;
     margin-left: 5px;
     padding-left: 15px;
-    background-color: rgb(192, 192, 192);
 }
 
 #side_menu{
@@ -75,16 +74,17 @@ body{
     height: auto;
     overflow-y: scroll;
     border-right: thick groove;
+    background-color:  white;
 }
 #side_menu ul{
     margin-top: 5px;
     padding-left: 0px;
+
 }
 #side_menu li{
-    list-style: none;
+    list-style: url(bookicon.png) inside;
     padding-top: 1px;
     padding-left: 10px;
-    border-bottom: medium groove;
 }
 #side_menu h3{
     height: 35px;
