--- a/base.css
+++ b/base.css
@@ -8,8 +8,19 @@
 body{
     max-width: 1000px;
     margin: 15px auto 15px auto;
-    background-color: rgb(86, 170, 170);
+    background-color: rgb(0,128,129);
 }
+
+#head_tab{
+    background-color: rgb(0, 1, 171);
+    color: white;
+}
+
+#head_tab p{
+    margin: 0px;
+    padding: 3px 3px;
+}
+
 #header{
     color: black;    
 }
@@ -59,10 +70,10 @@ body{
 
 #container{
     display: flex;
-    border-right: thick inset;
+    border-right: 4px inset;
     border-bottom: medium inset;
-    border-top: medium outset rgb(60, 60, 60);
-    border-left: thick outset rgb(60, 60, 60);
+    border-top: medium outset rgb(50, 50, 50);
+    border-left: 4px outset rgb(50, 50, 50);
     margin-left: 5px;
     margin-right: 5px;
 }
@@ -71,6 +82,7 @@ body{
     font-size: medium;
     width: 80%;
     max-height: 550px;
+    overflow-y: scroll;
     height: auto;
     margin-left: 5px;
     padding-left: 15px;
