--- a/base.css
+++ b/base.css
@@ -76,6 +76,7 @@ body{
     border-left: 4px outset rgb(50, 50, 50);
     margin-left: 5px;
     margin-right: 5px;
+    background-color: white;
 }
 
 #main_contents{
