--- a/base.css
+++ b/base.css
@@ -35,7 +35,7 @@ body{
 }
 
 #head_menu{
-    overflow: hidden;
+    overflow: auto;
     height: 50px;
     width: auto;
 }
@@ -117,15 +117,33 @@ body{
     border: thick ridge;
 }
 
+footer{
+    display: flex;
+}
 
+#foot_sitebar{
+    margin: 5px 2px 10px 5px; 
+    height: 20px; 
+    width: 85%;
+    border: medium inset; 
+    color: dimgray; 
+    overflow: hidden;
+}
+
+
+#foot_sitebar p{
+    margin-top: 3px;
+    margin-right: 5px;
+}
 
 #footer{
     margin: 5px 5px 10px; 
     height: 20px; 
+    width: 15%;
     border: medium inset;
     text-align: right; 
     color: dimgray; 
-    clear: both;
+    overflow: hidden;
 }
 
 #footer p{
