--- a/css/base.css
+++ b/css/base.css
@@ -11,37 +11,84 @@ body {
   margin: 0;
   padding: 0;
 }
-header {
-  height: 30px;
-  border-bottom: 2px dashed black;
+#wrapper {
+  display: flex;
+  min-height: 1080px;
 }
-#title{
+#maincont {
+    width: 90%;
+    height: 100%;
+}
+header {
+    height: 40px;
+    border-bottom: 2px dashed black;
+}
+#title {
     font-size: 20px;
     font-weight: bold;
 }
-#title1{
+#title1 {
     margin-right: 0.5em;
 }
-#wrapper{
+#PageWrap {
     display: flex;
+    height: 100%;
 }
-#maincont{
-    width: 90%;
-}
-#MenuBox{
-    width: 10%;
-}
-#Menulist li{
-    list-style-type: '> ';
-}
-#Menulist li#CurrentPage{
-    list-style-type: '-> ';
+#PageTitle {
+    width: 50px;
+    font-size: 50px;
     font-weight: bold;
+    font-style: italic;
+}
+#PageTitleTxt {
+    position: fixed;
+    height: 50px;
+    bottom: 0px;
+    left: 0px;
+    transform: rotate(270deg);
+    transform-origin: left top;
+}
+#PageCont{
+    display: flex;
+    width: calc(100% - 50px);
+    height: 100%;
+}
+.col{
+    width: 30%;
+    height: 100%;
+}
+.colborder{
+    width: 3%;
+    transform: rotate(90deg);
+    transform-origin: left bottom;
+    
+}
+#lastborder{
+    width: 4% !important;
+}
+
+
+
+
+#MenuBox {
+  width: 10%;
+  height: 100%;
+}
+#Menulist li {
+  list-style-type: "> ";
+}
+#Menulist li#CurrentPage {
+  list-style-type: "-> ";
+  font-weight: bold;
 }
 #MenuBoxTitle {
-font-size: 40px;
+  font-size: 40px;
   line-height: 0.5em;
   font-family: "Red Hat Mono", monospace;
   color: var(--acc);
   text-align: center;
+}
+.emoji {
+  font-family: "Segoe UI Emoji", "Segoe UI Symbol", "Apple Color Emoji",
+    "Noto Color Emoji", "Noto Emoji", sans-serif;
 }
