--- a/research/css/styles.css
+++ b/research/css/styles.css
@@ -3,80 +3,34 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
 }
 
 body {
-    font-family: 'BIZ UDP明朝', 'Source Serif Pro', serif;
+    font-family: "BIZ UDP明朝", "Source Serif Pro", serif;
     background-color: #f8f8f8;
 }
 
 header {
-    padding: 2rem;
+    align-items: center;
+    padding:2rem;
     background-color: #2c3e50;
     color: #ffffff;
 }
+
 .branding {
     margin-bottom: 1rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .logo {
     max-height: 50px;
     max-width: 100%;
-}
-.header-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-header h1 {
-    font-size: 2rem;
-}
-
-header p {
-    line-height: 1.7rem;
-    font-size: 1.2rem;
-}
-
-.article-metadata {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:flex-start;
-    color: #bbb;
-    margin-bottom: 1rem;
-    gap: 0.5rem;
-}
-
-.article-metadata p {
-    margin-bottom: 0.5rem;
-    font-size: 0.9rem;
-}
-
-/* Style the PDF download button */
-.pdf-download-btn {
-    display: flex;
-    justify-content: flex-end;
-    padding: 1rem 0;
-    margin-left: 1em;
-}
-
-.pdf-download-btn button {
-    font-family: 'BIZ UDP明朝', 'Source Serif Pro', serif;
-    font-size: 1.1rem;
-    background-color: #2c3e50;
-    color: #ffffff;
-    border: 1px solid #fff;
-    padding: 0.75rem 1.5rem;
-    border-radius: 4px;
-    cursor: pointer;
-    text-align: center;
-    vertical-align: middle;
-}
-
-.pdf-download-btn button:hover {
-    background-color: #29343d;
 }
 
 nav {
@@ -88,7 +42,7 @@ nav {
 nav ul {
     list-style-type: none;
     display: flex;
-    justify-content: space-around
+    justify-content: space-around;
 }
 
 nav ul li {
@@ -96,11 +50,10 @@ nav ul li {
     margin-right: 1rem;
 }
 
-nav ul li:last-child{
+nav ul li:last-child {
     margin-right: 0;
-    
 }
-    
+
 nav ul li a {
     font-weight: 700;
     text-decoration: none;
@@ -111,11 +64,10 @@ nav ul li a:hover {
     text-decoration: underline;
 }
 
-
-
-
 main {
     padding: 2rem;
+    margin: 0 auto;
+    max-width: 1200px;
 }
 
 section {
@@ -126,33 +78,65 @@ section {
 }
 
 section h2 {
-    font-family: 'BIZ UDP明朝', serif;
+    font-family: "BIZ UDP明朝", serif;
     font-size: 1.4rem;
     margin-bottom: 1.5rem;
 }
+
 section h3 {
-    font-family: 'BIZ UDP明朝', serif;
+    font-family: "BIZ UDP明朝", serif;
     font-size: 1.1rem;
     margin: 1.5rem 0;
     margin-bottom: 0.75rem;
 }
-section h4 {
-    font-family: 'BIZ UDP明朝', serif;
-    font-size: 1.5rem;
-    margin: 1.2rem 0;
-}
+
 section p {
     margin-bottom: 1rem;
     font-size: 1rem;
 }
 
-section ol {
-    padding-left: 1rem;
-    margin-bottom: 1rem;
+.research-article {
+    margin-bottom: 2rem;
 }
-section ol li {
-    font-size: 1.1rem;
+
+.research-article h3 {
+    font-size: 1.3rem;
     margin-bottom: 0.5rem;
+}
+
+.research-article h3 a {
+    color: #333;
+}
+
+.research-article h3 a:hover {
+    color: #4e6d8f;
+    text-decoration: underline;
+}
+
+.research-article .author {
+    font-size: 1.1rem;
+    color: #777;
+    margin-bottom: 0.5rem;
+}
+
+.research-article .description {
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-bottom: 0.5rem;
+}
+
+.research-article .read-more {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #6b95c2;
+}
+
+.research-article .read-more:hover {
+    text-decoration: underline;
+}
+
+.pdf-download-btn button:hover {
+    background-color: #29343d;
 }
 
 a {
@@ -170,62 +154,7 @@ section ul li {
     line-height: 1.75;
 }
 
-/* Add a background color to code snippets for better readability */
-pre {
-    background-color: #f5f5f5;
-    padding: 1rem;
-    border-radius: 4px;
-    margin-bottom: 1rem;
-}
-
-/* Style blockquotes for better readability */
-blockquote {
-    font-family: 'Merriweather', serif;
-    font-size: 1.4rem;
-    line-height: 1.6;
-    color: #666;
-    border-left: 4px solid #3498db;
-    padding-left: 1.5rem;
-    margin: 1.5rem 0;
-}
-
-/* Style tables */
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 1rem;
-}
-
-table th,
-table td {
-    padding: 0.75rem;
-    border: 1px solid #ccc;
-    text-align: left;
-}
-
-table th {
-    font-weight: bold;
-    background-color: #f5f5f5;
-}
-
-table tr:nth-child(even) {
-    background-color: #f8f8f8;
-}
-
-/* Improve readability of figure captions */
-figure {
-    margin: 1rem 0;
-}
-
-figcaption {
-    font-size: 0.9rem;
-    color: #777;
-    text-align: center;
-    margin-top: 0.5rem;
-}
-
-
-footer{
+footer {
     padding: 1rem;
     background-color: #2c3e50;
     color: #ffffff;
